# uiprotect

./: .all-contributorsrc  .copier-answers.yml  .coveragerc  .dockerignore  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LIVE_DATA_CI.md  README  README.md  SECURITY.md  TESTDATA.md  dev-requirements.txt  dumpeventdata.py  mkdocs.yml  mypy.ini  protectdata_function.py  protectdata_raw.py  protectdata_sensor.py  pyproject.toml  requirements.txt  requirements_all.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini  websocket_test.py
.bin/: format-code  install-requirements  lint-code  run-mypy  test-code  update-release-cache  update-requirements
.bin/lib/: common.sh
.devcontainer/: Dockerfile  devcontainer.json
.docker/: bashrc  docker-fix.sh  entrypoint.sh
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yaml  ci.yml  docker.yml  docker_test.yml  docs.yml  issue-manager.yml  poetry-upgrade.yml  private-api-removal.yml  pypi.yml  release.yml  spec-validation.yml  test-live-AngellusMortis.yml  test-live-bdraco.yml
docs/: api.md  cli.md  conf.py  contributing.md  dev.md  index.md  installation.md  usage.md
docs/overrides/partials/: toc-item.html
openapi/: .validated-version
pyunifiprotect/: __init__.py  __main__.py  api.py  cli.py  const.py  exceptions.py  release_cache.json  stream.py  unifi_data.py  unifi_protect_server.py  utils.py  websocket.py
pyunifiprotect/cli/: __init__.py  backup.py  base.py  cameras.py  chimes.py  doorlocks.py  events.py  light.py  lights.py  liveviews.py  nvr.py  sensors.py  viewers.py
pyunifiprotect/data/: __init__.py  base.py  bootstrap.py  convert.py  devices.py  nvr.py  types.py  user.py  websocket.py
pyunifiprotect/test_util/: __init__.py  anonymize.py  data.py
scripts/: fetch_openapi.py  find_removable_private_api.py  validate_spec.py
src/uiprotect/: __init__.py  __main__.py  _compat.py  _public_api.py  _public_api_limiter.py  _rate_limit.py  _superseded.py  api.py  exceptions.py  rate_limiter.py  release_cache.json  retry.py  stream.py  utils.py  websocket.py
src/uiprotect/cli/: __init__.py  aiports.py  arm.py  backup.py  base.py  bridges.py  cameras.py  chimes.py  doorlocks.py  events.py  files_public.py  fobs.py  lights.py  link_stations.py  liveviews.py  nvr.py  relays.py  sensors.py  sirens.py  speakers.py  ulp_users_public.py  users_public.py  viewers.py  viewers_public.py
src/uiprotect/data/: __init__.py  base.py  bootstrap.py  convert.py  devices.py  nvr.py  public_bootstrap.py  public_devices.py  public_event.py  types.py  user.py  websocket.py
src/uiprotect/devices/: __init__.py  dispatcher.py  protect_device_change.py
src/uiprotect/events/: __init__.py  _mapping.py  dispatcher.py  enricher.py  protect_event.py
src/uiprotect/test_util/: __init__.py  anonymize.py
templates/: CHANGELOG.md.j2
tests/: common.py  conftest.py  test_alarm_hub.py  test_anonymize.py  test_api.py  test_api_camera_disable_mic_public.py  test_api_camera_public.py  test_api_chime_public.py  test_api_devices_public.py  test_api_files_public.py  test_api_light_public.py  test_api_linkstation_public.py  test_api_polling.py  test_api_public.py  test_api_public_only.py  test_api_users_public.py  test_api_ws.py  test_api_ws_public.py  test_backup_paths.py  test_cli.py  test_data.py  test_data_updates.py  test_dunder_main.py  test_em_error_paths.py  test_events_adapter.py  test_events_dispatcher.py  test_events_enricher.py  test_events_lifecycle_callbacks.py  test_events_mapping.py  test_events_reconnect.py  test_events_reconnect_force_end.py  test_events_ttl_sweep.py  test_events_value_types.py  test_fetch_openapi.py  test_find_removable_private_api.py  test_main.py  test_public_api_decorators.py  test_public_api_limiter.py  test_public_camera_detection.py  test_public_devices_models.py  (+16 more)
tests/benchmarks/: __init__.py  conftest.py  test_process_ws_packet.py
tests/data/: test_camera.py  test_chime.py  test_common.py  test_convert.py  test_doorlock.py  test_event_detected_thumbnail.py  test_event_license_plate.py  test_light.py  test_nvr.py  test_sensor.py  test_types.py  test_user.py  test_viewer.py  test_ws_packet.py
tests/sample_data/: constants.py  sample_aiport.json  sample_boostrap.json  sample_bootstrap.json  sample_bridge.json  sample_camera.json  sample_chime.json  sample_constants.json  sample_event_smart_track.json  sample_keyrings.json  sample_light.json  sample_link_station_alarm_hub.json  sample_liveview.json  sample_liveviews.json  sample_raw_events.json  sample_raw_events_camera.json  sample_sensor.json  sample_ulp_users.json  sample_up_airquality_sensor.json  sample_viewport.json  sample_ws_messages.json
tests/sample_data/events_ws_public/: born_closed_update_bad_start.json  fingerprint_add_ulpid_null.json  fingerprint_add_with_end.json  light_motion_add.json  nfc_add_with_end.json  open_unknown_update.json  package_born_closed_update.json  smartdetect_lifecycle.json
