[metadata]
name = pyunifiprotect
version = 3.1.0
description = Python Wrapper for Unifi Protect API
long_description = file: README.md
long_description_content_type = text/markdown
author = Bjarne Riis
author_email = bjarne@briis.com
url = https://github.com/briis/pyunifiprotect
license = MIT
keywords = UnifiProtect, Surveilance, Unifi, Home Assistant, Python
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
install_requires =
    aiohttp
    aioshutil
    asyncio
    packaging
    pillow
    pydantic
    pyjwt
    python-dotenv
    pytz
    typer

[options.package_data]
pyunifiprotect = py.typed

[options.packages.find]
exclude=
    tests
    tests.*

[options.entry_points]
console_scripts =
    unifi-protect = pyunifiprotect.__main__:start

[options.extras_require]
dev =
    base36
    black
    build
    coverage[toml]
    flake8
    flake8-docstrings
    ipython<7.30
    mypy
    pip-tools
    pydocstyle
    pylint
    pylint_strict_informational
    pyproject-flake8
    pytest
    pytest-asyncio
    pytest-benchmark
    pytest-cov
    pytest-sugar
    pytest-timeout>=1.2.1
    pytest-xdist
    termcolor
    tox
    types-pillow
    types-pytz
    types-termcolor
shell=
    ipython<7.30
    termcolor
