[metadata]
name = pyunifiprotect
version = 4.1.2
description = Unofficial UniFi Protect Python API and CLI
long_description = file: README.md
long_description_content_type = text/markdown
author = Bjarne Riis
author_email = bjarne@briis.com
url = https://github.com/briis/pyunifiprotect
license = MIT
keywords = UniFiProtect, Surveilance, UniFi, Home Assistant, Python
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
install_requires =
    aiofiles
    aiohttp
    aioshutil
    orjson
    packaging
    pillow
    pydantic!=1.9.1 # https://github.com/samuelcolvin/pydantic/issues/4092
    pyjwt
    pytz
    typer

[options.package_data]
pyunifiprotect = py.typed

[options.packages.find]
exclude=
    tests
    tests.*

[options.entry_points]
console_scripts =
    unifi-protect = pyunifiprotect.__main__:start

[options.extras_require]
dev =
    base36
    black
    build
    coverage[toml]
    # https://github.com/csachs/pyproject-flake8/issues/13
    flake8<5
    flake8-docstrings
    ipython
    mypy
    pip-tools
    pydocstyle
    pylint
    pylint_strict_informational
    pyproject-flake8
    pytest
    pytest-asyncio
    pytest-benchmark
    pytest-cov
    pytest-sugar
    pytest-timeout>=1.2.1
    pytest-xdist
    termcolor
    types-aiofiles
    types-pillow
    types-pytz
    types-termcolor
shell=
    ipython
    termcolor
    python-dotenv
